--- a/css/style.css
+++ b/css/style.css
@@ -438,11 +438,9 @@ header .menu {
     .txt p {
         font-size: 15px;
     }
-
 }
 
 @media screen and (max-width: 750px) {
-
     .txt {
         width: 50%;
     }
@@ -454,7 +452,8 @@ header .menu {
     }
 
     .txt p {
-        font-size: 12px;
+        font-size: 13px;
+        line-height: 1.3;
     }
 
     .btn-shop {
